bug fix for alignment

--- a/_sass/about.scss
+++ b/_sass/about.scss
@@ -124,7 +124,7 @@
 .team-box{
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-evenly;
+  justify-content: space-between;
   
   .team-member{
     cursor: pointer;
