--- a/_sass/home_page.scss
+++ b/_sass/home_page.scss
@@ -1056,7 +1056,7 @@
   .partners-logo-box{
     display: flex;
     align-items: center;
-    justify-content: space-evenly;
+    justify-content: space-between;
     flex-wrap: wrap;
 
     img{
